--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-    "name": "condolences-frontend",
-    "private": true,
-    "scripts": {
-        "start": "meteor run",
-        "test": "meteor test --once --driver-package meteortesting:mocha",
-        "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
-        "visualize": "meteor --production --extra-packages bundle-visualizer"
-    },
-    "dependencies": {
-        "@babel/runtime": "^7.8.4",
-        "apollo-client": "^2.6.8",
-        "body-parser": "^1.19.0",
-        "express": "^4.17.1",
-        "graphql": "^14.6.0",
-        "graphql-server-express": "^1.4.1",
-        "graphql-tools": "^4.0.7",
-        "meteor-node-stubs": "^1.0.0",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0"
-    },
-    "devDependencies": {
-        "@types/meteor": "^1.4.40",
-        "@types/mocha": "^5.2.7",
-        "@types/react": "^16.9.23",
-        "@types/react-dom": "^16.9.5",
-        "typescript": "^3.8.2"
-    }
+  "name": "condolences-frontend",
+  "private": true,
+  "scripts": {
+    "start": "meteor run",
+    "test": "meteor test --once --driver-package meteortesting:mocha",
+    "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
+    "visualize": "meteor --production --extra-packages bundle-visualizer"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.8.4",
+    "apollo-client": "^2.6.8",
+    "apollo-client-preset": "^1.0.8",
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "graphql": "^14.6.0",
+    "graphql-server-express": "^1.4.1",
+    "graphql-tag": "^2.10.3",
+    "graphql-tools": "^4.0.7",
+    "lodash": "^4.17.15",
+    "meteor-node-stubs": "^1.0.0",
+    "react": "^16.13.0",
+    "react-apollo": "^3.1.3",
+    "react-dom": "^16.13.0"
+  },
+  "devDependencies": {
+    "@types/meteor": "^1.4.40",
+    "@types/mocha": "^5.2.7",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "babel-plugin-inline-import": "^3.0.0",
+    "typescript": "^3.8.2"
+  }
 }
